traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:1: error: Missing closing brace `}' assumed here
var n = 0;
^TraversalDiagonal:1: error: expected class or object definition
var n = 0;
^TraversalDiagonal:2: error: expected class or object definition
val x = getWorldWidth();
^TraversalDiagonal:3: error: expected class or object definition
val y = getWordlHeight();
^TraversalDiagonal:6: error: expected start of definition
override def run() {
         ^