traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
var n = 0;
val x = getWorldWidth();
val y = getWordlHeight();


override def run() {
  while (! isInPosition(x,y)) match {
    case (_,0) => {for (X <- 0 to diag){
      for (Y <- diag to 0) {
        setPos(X,Y)
        writeMessage(n)
        n = n + 1
      }
    }
      diag = diag + 1
    }
    case (x-1,_) => {for (X <- 0 to diag){
      for (Y <- diag to 0) {
        setPos(X,Y)
        writeMessage(n)
        n = n + 1
      }
      diag = diag - 1
    }
  }
}



def isInPosition(x: Int, y: Int):Boolean = {
  if ( (x -1 == getX()) && (y -1 == getY())) {
    writeMessage(x * y -1)
    return true
  }
  else {return false}
}



setPos(i,i)
      writeMessage(n)
      n=n+1